fix: horizontal scrollbar + removed irrelevant co2eqs

--- a/static/global-cache-bust-13.css
+++ b/static/global-cache-bust-13.css
@@ -23,7 +23,12 @@ html {
 	--color-invert-link-on: deepskyblue;
 
 	--content-width: 60ch;
-	--content-bleed: calc((100vw - var(--content-width)) / 2);
+
+	/*
+		See src/routes/_layout.svelte : the width of the scrollbar is calculated
+		using JS on window:load and put in the --content-width CSS var on <html>.
+	*/
+	--content-bleed: calc((100vw - var(--scrollbar-width) - var(--content-width)) / 2);
 
 	--space-xl: 2rem;
 	--space-l: 1rem;
